# delsys-trigno-client

./: LICENSE  README.md  pyproject.toml
delsys_trigno_client/: __init__.py  client.py  constants.py  mock.py
examples/: mockclient.py  mockserver.py  plot.py
